fix: show modal close button with correct color in dark mode

--- a/frontend/global-styles/colors-only-bootstrap/_close.scss
+++ b/frontend/global-styles/colors-only-bootstrap/_close.scss
@@ -10,12 +10,12 @@
 // See https://developer.mozilla.org/en-US/docs/Web/Events/click#Safari_Mobile
 
 .btn-close {
-  color: $btn-close-color;
+  color: var(--bs-modal-color);
   background: transparent escape-svg($btn-close-bg) center / $btn-close-width auto no-repeat; // include transparent for button elements
 
   // Override <a>'s hover style
   &:hover {
-    color: $btn-close-color;
+    color: var(--bs-modal-color);
   }
 
   &:focus {
