--- a/frontend/global-styles/variables.dark.scss
+++ b/frontend/global-styles/variables.dark.scss
@@ -103,6 +103,7 @@ $toast-background-color: $gray-700;
 $toast-header-background-color: $gray-800;
 
 // Modals
+$modal-content-color: $dark;
 $modal-content-bg: $gray-800;
 $modal-content-border-color: $gray-700;
 $modal-header-border-color: $gray-700;
